cabal-version: 2.2
name: smopeck
version: 0.1.0.0
license: Apache-2.0
license-file: LICENSE
maintainer: autotaker@gmail.com
author: Taku Terao
build-type: Simple
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Smopeck.App
        Smopeck.Config
        Smopeck.App.Mock
        Smopeck.App.Proxy
        Smopeck.App.Test
        Smopeck.Spec.Parser
        Smopeck.Spec.Lexer
        Smopeck.Spec.Syntax
        Smopeck.Spec.Validator
    hs-source-dirs: src 
    default-language: Haskell2010
    build-tool-depends: 
        alex:alex , happy:happy
    build-depends:
        base ^>=4.12,
        optparse-applicative ^>=0.14.3,
        wai ^>=3.2.2,
        warp ^>=3.3,
        http-types ^>=0.12.3,
        array ^>=0.5.3.0,
        free ^>=5.1.3,
        aeson ^>=1.4.6.0,
        base ^>=4.12,
        optparse-applicative ^>=0.14.3,
        wai ^>=3.2.2,
        warp ^>=3.3,
        http-types ^>=0.12.3,
        mtl -any,
        containers -any,
        text -any,
        scientific -any

executable smopeck
    main-is: Main.hs
    default-language: Haskell2010
    build-depends:
        base ^>=4.12,
        smopeck -any

test-suite unit-test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    other-modules:
        Smopeck.ConfigSpec
        Smopeck.AppSpec
        Smopeck.Spec.ParserSpec
        Smopeck.Spec.LexerSpec
        Smopeck.Spec.ValidatorSpec
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base ^>=4.12,
        hspec ^>=2.7.1,
        HUnit ^>=1.6.0,
        mtl -any,
        containers -any,
        smopeck -any,
        aeson -any
