cabal-version: 2.2
name: smopeck
version: 0.1.0.0
license: Apache-2.0
license-file: LICENSE
maintainer: autotaker@gmail.com
author: Taku Terao
build-type: Simple
extra-source-files:
    CHANGELOG.md
    README.md
data-files:
    data/assets/prelude.spec

library
    exposed-modules:
        Smopeck.App
        Smopeck.Config
        Smopeck.App.Check
        Smopeck.App.Mock
        Smopeck.App.Proxy
        Smopeck.App.Test
        Smopeck.Spec.Exp
        Smopeck.Spec.Desugar
        Smopeck.Spec.TypeExp
        Smopeck.Spec.Parser
        Smopeck.Spec.Lattice
        Smopeck.Spec.Lexer
        Smopeck.Spec.Syntax
        Smopeck.Spec.Validator
        Smopeck.Spec.RegexUtil
        Smopeck.Spec.Preprocess
        Smopeck.Spec.Route
        Smopeck.Mock.Location
        Smopeck.Mock.Value
        Smopeck.Mock.Dependency
        Smopeck.Mock.Constraint
        Smopeck.Logic.Number
        Smopeck.Logic.Model
        Smopeck.Logic.Equality
        Smopeck.Logic.Regex
    other-modules:
        Paths_smopeck
    hs-source-dirs: src 
    default-language: Haskell2010
    build-tool-depends: 
        alex:alex , happy:happy
    build-depends:
        base ^>=4.13,
        optparse-applicative ^>=0.15.1.0,
        wai ^>=3.2.2,
        warp ^>=3.3,
        http-types ^>=0.12.3,
        array ^>=0.5.3.0,
        free ^>=5.1.3,
        aeson ^>=1.4.6.0,
        aeson-pretty ^>= 0.8.8,
        http-client ^>=0.6.4,
        hashtables ^>= 1.2.3.4,
        mwc-random ^>= 0.14.0.0,
        monad-logger ^>= 0.3.32,
        lens >= 4.4 && < 5,
        lens-aeson ^>= 1.1,
        regex-tdfa ^>= 1.3.1.0,
        pretty ^>= 1.1.3.6,
        text-show ^>= 3.8.5,
        mtl -any,
        containers -any,
        text -any,
        bytestring -any,
        scientific -any,
        hashable -any,
        unordered-containers -any,
        vector -any,
        primitive -any,
        case-insensitive -any


executable smopeck
    main-is: Main.hs
    default-language: Haskell2010
    build-depends:
        base ^>=4.13,
        monad-logger -any,
        smopeck -any

test-suite unit-test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    other-modules:
        Smopeck.ConfigSpec
        Smopeck.AppSpec
        Smopeck.Spec.TypeUtil
        Smopeck.Spec.ExpSpec
        Smopeck.Spec.TypeExpSpec
        Smopeck.Spec.ParserSpec
        Smopeck.Spec.LexerSpec
        Smopeck.Spec.DesugarSpec
        Smopeck.Spec.ValidatorSpec
        Smopeck.Spec.RegexUtilSpec
        Smopeck.Mock.LocationSpec
        Smopeck.Mock.DependencySpec
        Smopeck.Mock.ConstraintSpec
        Smopeck.Logic.NumberSpec
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base ^>=4.13,
        hspec ^>=2.7.1,
        HUnit ^>=1.6.0,
        mtl -any,
        containers -any,
        smopeck -any,
        hashtables -any,
        monad-logger -any,
        aeson -any
    build-tool-depends:
      hspec-discover:hspec-discover
